k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartsplit-ingress
  namespace: smartsplit
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8081
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
